--- a/package.json
+++ b/package.json
@@ -9,8 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.9.0",
     "ejs": "^1.0.0",
     "express": "^4.6.1",
     "request": "^2.45.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ybinstock/omdb_crud_lab.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ybinstock/omdb_crud_lab/issues"
+  },
+  "homepage": "https://github.com/ybinstock/omdb_crud_lab"
 }
